--- a/backend/app/globals.css
+++ b/backend/app/globals.css
@@ -1,8 +1,9 @@
 @import "tailwindcss";
 
+html,
+body,
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  height:100%;
 }
 
 @theme inline {
